[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/themes/custom/new_theme.tres" type="Theme" id=1]
[ext_resource path="res://resources/themes/custom/texture_panel.tres" type="StyleBox" id=2]
[ext_resource path="res://objects/UI/card_maker/CardTab.gd" type="Script" id=3]
[ext_resource path="res://objects/UI/card_maker/CardAnimationOption.gd" type="Script" id=4]
[ext_resource path="res://objects/UI/card_maker/WeaponOption.gd" type="Script" id=5]

[node name="CardTab" type="Panel"]
anchor_right = 0.428
anchor_bottom = 0.567
margin_right = -242.76
margin_bottom = 276.64
rect_min_size = Vector2( 548, 0 )
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 559.0
margin_bottom = 838.0
rect_min_size = Vector2( 516, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer5" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 559.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer5"]
margin_right = 124.0
margin_bottom = 19.0
text = "Card Upgrade Cost"

[node name="CardUpgradeCost" type="SpinBox" parent="ScrollContainer/VBoxContainer/HBoxContainer5"]
margin_left = 130.0
margin_right = 194.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionCost" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 559.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/ActionCost"]
margin_right = 51.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AP Cost"

[node name="ActionCost" type="SpinBox" parent="ScrollContainer/VBoxContainer/ActionCost"]
margin_left = 57.0
margin_right = 121.0
margin_bottom = 19.0
max_value = 1000.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Damage" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 559.0
margin_bottom = 69.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Damage"]
margin_right = 52.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Damage"

[node name="Damage" type="SpinBox" parent="ScrollContainer/VBoxContainer/Damage"]
margin_left = 58.0
margin_right = 122.0
margin_bottom = 19.0
hint_tooltip = "Base damage dealt to target. (Negative values will heal target)"
min_value = -1000.0
max_value = 1000.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delay" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 559.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Delay"]
margin_right = 72.0
margin_bottom = 19.0
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Card Delay"

[node name="Delay" type="SpinBox" parent="ScrollContainer/VBoxContainer/Delay"]
margin_left = 78.0
margin_right = 142.0
margin_bottom = 19.0
hint_tooltip = "How long it takes to cast this card. (100 is a full round)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Range" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 559.0
margin_bottom = 119.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Range"]
margin_right = 67.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Min Range"

[node name="MinRange" type="SpinBox" parent="ScrollContainer/VBoxContainer/Range"]
margin_left = 73.0
margin_right = 137.0
margin_bottom = 19.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/VBoxContainer/Range"]
margin_left = 143.0
margin_right = 147.0
margin_bottom = 19.0

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/Range"]
margin_left = 153.0
margin_right = 225.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Max Range"

[node name="MaxRange" type="SpinBox" parent="ScrollContainer/VBoxContainer/Range"]
margin_left = 231.0
margin_right = 295.0
margin_bottom = 19.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerticalRange" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 559.0
margin_bottom = 144.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/VerticalRange"]
margin_right = 115.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Up Vertical Range"

[node name="UpVertRange" type="SpinBox" parent="ScrollContainer/VBoxContainer/VerticalRange"]
margin_left = 121.0
margin_right = 185.0
margin_bottom = 19.0
max_value = 20.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/VBoxContainer/VerticalRange"]
margin_left = 191.0
margin_right = 195.0
margin_bottom = 19.0

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/VerticalRange"]
margin_left = 201.0
margin_right = 335.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Down Vertical Range"

[node name="DownVertRange" type="SpinBox" parent="ScrollContainer/VBoxContainer/VerticalRange"]
margin_left = 341.0
margin_right = 405.0
margin_bottom = 19.0
max_value = 20.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardAddedAccuracy" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 559.0
margin_bottom = 169.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/CardAddedAccuracy"]
margin_right = 127.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Additional Accuracy"

[node name="AddedAccuracy" type="SpinBox" parent="ScrollContainer/VBoxContainer/CardAddedAccuracy"]
margin_left = 133.0
margin_right = 197.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/VBoxContainer/CardAddedAccuracy"]
margin_left = 203.0
margin_right = 207.0
margin_bottom = 19.0

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/CardAddedAccuracy"]
margin_left = 213.0
margin_right = 368.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Additional Crit Accuracy"

[node name="AddedCritAccuracy" type="SpinBox" parent="ScrollContainer/VBoxContainer/CardAddedAccuracy"]
margin_left = 374.0
margin_right = 438.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer2" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 175.0
margin_right = 559.0
margin_bottom = 194.0

[node name="AddPrerequisite" type="Button" parent="ScrollContainer/VBoxContainer/GridContainer2"]
margin_right = 115.0
margin_bottom = 19.0
text = "Add Prerequisite"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_top = 150.0
margin_right = 516.0
margin_bottom = 169.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_right = 41.0
margin_bottom = 19.0
text = "Value:"

[node name="HBoxContainer4" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 559.0
margin_bottom = 219.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_right = 89.0
margin_bottom = 19.0
text = "Card Element"

[node name="CardElement" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_left = 95.0
margin_right = 208.0
margin_bottom = 19.0
text = "Card Element"

[node name="CardElement2" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_left = 214.0
margin_right = 339.0
margin_bottom = 19.0
text = "Card Element 2"

[node name="CardElement3" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_left = 345.0
margin_right = 470.0
margin_bottom = 19.0
text = "Card Element 3"

[node name="HBoxContainer6" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 225.0
margin_right = 559.0
margin_bottom = 244.0

[node name="AddSelfStatus" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer6"]
margin_right = 107.0
margin_bottom = 19.0
text = "Add Self Status"

[node name="SelfDuration" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 250.0
margin_right = 559.0
margin_bottom = 269.0
text = "Duration:"

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 204.0
margin_right = 516.0
margin_bottom = 232.0
rect_min_size = Vector2( 0, 28 )
mouse_filter = 2

[node name="HBoxContainer7" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 275.0
margin_right = 559.0
margin_bottom = 294.0

[node name="AddTargetStatus" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer7"]
margin_right = 124.0
margin_bottom = 19.0
text = "Add Target Status"

[node name="TargetDuration" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 559.0
margin_bottom = 319.0
text = "Duration:"

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 256.0
margin_right = 516.0
margin_bottom = 284.0
rect_min_size = Vector2( 0, 28 )
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 559.0
margin_bottom = 390.0
columns = 4

[node name="Action" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_right = 126.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
pressed = true
text = "Action"

[node name="Reaction" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 130.0
margin_right = 239.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Reaction"

[node name="NeedLOS" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 243.0
margin_right = 394.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
pressed = true
text = "Needs Line of Sight"

[node name="Piercing" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 398.0
margin_right = 559.0
margin_bottom = 19.0
hint_tooltip = "Ignore Block"
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Piercing"

[node name="Shattering" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_top = 23.0
margin_right = 126.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Shattering"
__meta__ = {
"_editor_description_": "Damage target's block and health."
}

[node name="Consume" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 130.0
margin_top = 23.0
margin_right = 239.0
margin_bottom = 42.0
text = "Consumable"

[node name="Homing" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 243.0
margin_top = 23.0
margin_right = 394.0
margin_bottom = 42.0
text = "Homing"

[node name="Combo" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 398.0
margin_top = 23.0
margin_right = 559.0
margin_bottom = 42.0
text = "Combo"

[node name="SelfEliminating" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_top = 46.0
margin_right = 126.0
margin_bottom = 65.0
text = "Self Eliminating"

[node name="Counter" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 130.0
margin_top = 46.0
margin_right = 239.0
margin_bottom = 65.0
disabled = true
text = "Counter"

[node name="Reflex" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 243.0
margin_top = 46.0
margin_right = 394.0
margin_bottom = 65.0
disabled = true
text = "Reflex"

[node name="HexagonalTargeting" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 398.0
margin_top = 46.0
margin_right = 559.0
margin_bottom = 65.0
text = "Hexagonal Targeting"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 396.0
margin_right = 559.0
margin_bottom = 415.0

[node name="Animation" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Animation"

[node name="CardAnimation" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 94.0
margin_bottom = 19.0
script = ExtResource( 4 )

[node name="Animation2" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 176.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Animation 2"

[node name="CardAnimation2" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 182.0
margin_right = 206.0
margin_bottom = 19.0
script = ExtResource( 4 )

[node name="CounterAnimTandem" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 212.0
margin_right = 385.0
margin_bottom = 19.0
disabled = true
text = "Counter Anim Tandem"

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 421.0
margin_right = 559.0
margin_bottom = 440.0

[node name="LeftHandWeapon" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_right = 121.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Left Hand Weapon"

[node name="Weapon" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 127.0
margin_right = 151.0
margin_bottom = 19.0
script = ExtResource( 5 )

[node name="RightHandWeapon" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 157.0
margin_right = 285.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Right Hand Weapon"

[node name="Weapon2" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 291.0
margin_right = 315.0
margin_bottom = 19.0
script = ExtResource( 5 )

[node name="DescriptionLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 446.0
margin_right = 559.0
margin_bottom = 465.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Description Text"

[node name="Description" type="TextEdit" parent="ScrollContainer/VBoxContainer"]
margin_top = 471.0
margin_right = 559.0
margin_bottom = 551.0
rect_min_size = Vector2( 0, 80 )
wrap_enabled = true

[node name="BehaviorTree" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 557.0
margin_right = 559.0
margin_bottom = 576.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/BehaviorTree"]
margin_right = 91.0
margin_bottom = 19.0
hint_tooltip = "Used for more advanced card behaviors."
mouse_filter = 1
text = "Behavior Tree"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddItem" type="Button" parent="ScrollContainer/VBoxContainer/BehaviorTree"]
margin_left = 97.0
margin_right = 168.0
margin_bottom = 19.0
text = "Add Node"

[node name="RemoveItem" type="Button" parent="ScrollContainer/VBoxContainer/BehaviorTree"]
margin_left = 174.0
margin_right = 272.0
margin_bottom = 19.0
text = "Remove Node"

[node name="PrintTree" type="Button" parent="ScrollContainer/VBoxContainer/BehaviorTree"]
margin_left = 278.0
margin_right = 350.0
margin_bottom = 19.0
text = "Print Tree"

[node name="Tree" type="Tree" parent="ScrollContainer/VBoxContainer"]
pause_mode = 2
margin_top = 582.0
margin_right = 559.0
margin_bottom = 838.0
rect_min_size = Vector2( 0, 256 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ScrollContainer/VBoxContainer/GridContainer2/AddPrerequisite" to="." method="_on_AddPrerequisite_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer6/AddSelfStatus" to="." method="_on_AddSelfStatus_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer7/AddTargetStatus" to="." method="_on_AddTargetStatus_pressed"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/GridContainer/Reaction" to="." method="_on_Reaction_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/GridContainer/Counter" to="." method="_on_Counter_toggled"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/BehaviorTree/AddItem" to="." method="_on_AddItem_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/BehaviorTree/RemoveItem" to="." method="_on_RemoveItem_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/BehaviorTree/PrintTree" to="." method="_on_PrintTree_pressed"]
[connection signal="item_activated" from="ScrollContainer/VBoxContainer/Tree" to="." method="_on_Tree_item_activated"]
[connection signal="nothing_selected" from="ScrollContainer/VBoxContainer/Tree" to="." method="_on_Tree_nothing_selected"]
